<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shopzada</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="image">Image</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="chat">Chat</string>
    <string name="feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="undefined" tools:ignore="ExtraTranslation">Undefined</string>
    <string name="level">Level 1</string>
    <string name="likes">Likes</string>
    <string name="szcredits">Shopzada Credits</string>
    <string name="zero">0</string>
    <string name="zerodecimal">0.00</string>
    <string name="points">Points</string>
    <string name="levelpoint">Level Points</string>
    <string name="experience">660</string>
    <string name="mycoupons">My Coupons</string>
    <string name="myorders">My Orders</string>
    <string name="luckywheel">Lucky Wheel</string>
    <string name="myprofile">My Profile</string>
    <string name="myaccount">My Account</string>
    <string name="mycart">My Cart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="conpassword">Confirm Password</string>
    <string name="email">E-mail</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="accounted">Already have an account?</string>
    <string name="unaccounted">Don\'t have an account?</string>
    <string name="search">Search</string>
    <string name="mystore">My Store</string>
    <string name="adminmanagement">Admin Management</string>
    <string name="addaproduct">Add a product</string>
    <string name="manageaproduct">Manage a product</string>
    <string name="viewaproduct">View a product</string>
    <string name="luckypointsremain">Lucky Points : 0</string>
    <string name="productapprovement">Product Approvement</string>
    <string name="productmanagement">Product Management</string>
    <string name="addtocart">Add to cart</string>
    <string name="buynow">Buy now</string>
    <string name="uploadabeep">Upload a Beep</string>
    <string name="followers">Followers</string>
    <string name="checkout">Checkout</string>
    <string name="deliveryaddress">Delivery Address</string>
    <string name="discountcode">Discount Code</string>
</resources>