<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore"
        app:cnb_iconColor="@color/mainRed"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/black">
    </item>
    <item
        android:id="@+id/nav_following"
        android:icon="@drawable/ic_follow"
        android:title="@string/following"
        app:cnb_iconColor="@color/mainRed"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/black">
    </item>
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_video"
        android:title="@string/feed"
        app:cnb_iconColor="@color/mainRed"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/black">
    </item>
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:cnb_iconColor="@color/mainRed"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/black">
    </item>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/mainRed"
        app:cnb_iconTintMode="src_in"
        app:cnb_textColor="@color/black">
    </item>
</menu>