<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_background"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backButton"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:layout_margin="15dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_left_arrow_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/kanit_bold"
                android:gravity="center"
                android:text="@string/back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="75dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kanit_bold"
                android:letterSpacing="0.05"
                android:textSize="26dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kanit_bold"
                        android:letterSpacing="0.03"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:layout_marginLeft="5dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@drawable/sub_button"
                        android:elevation="4dp"
                        android:layout_margin="5dp"
                        android:hint="@string/username"
                        android:fontFamily="@font/kanit_bold"
                        android:paddingLeft="12dp"
                        android:textSize="14dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kanit_bold"
                        android:letterSpacing="0.03"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@drawable/sub_button"
                        android:elevation="4dp"
                        android:layout_margin="5dp"
                        android:hint="@string/password"
                        android:fontFamily="@font/kanit_bold"
                        android:paddingLeft="12dp"
                        android:textSize="14dp"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kanit_bold"
                            android:letterSpacing="0.03"
                            android:text="Remember Me"
                            android:buttonTint="@color/mainRed"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Forget Password?"
                            android:letterSpacing="0.03"
                            android:textColor="@color/black"
                            android:fontFamily="@font/kanit_bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/loginConfirmButton"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:elevation="4dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/main_button">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:fontFamily="@font/kanit_bold"
                            android:textColor="@color/white"
                            android:textAllCaps="true"
                            android:letterSpacing="0.03"
                            android:textSize="12dp"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/registerPage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/kanit_bold"
                                android:letterSpacing="0.03"
                                android:text="@string/unaccounted"
                                android:textColor="@color/black" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:fontFamily="@font/kanit_bold"
                                android:letterSpacing="0.03"
                                android:text="@string/register"
                                android:textColor="@color/mainRed" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:elevation="4dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:padding="10dp"
                        android:background="@drawable/facebook_button">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/ic_facebook"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/facebookButton"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginRight="10dp"/>

                        <TextView
                            android:id="@+id/facebookButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kanit_bold"
                            android:letterSpacing="0.03"
                            android:text="@string/facebook"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:elevation="4dp"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:background="@drawable/google_button">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/ic_google"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/googleButton"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginRight="10dp"/>

                        <TextView
                            android:id="@+id/googleButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/kanit_bold"
                            android:letterSpacing="0.03"
                            android:text="@string/google"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>